# demo_intek

./: .gitignore  docker-compose.yml  package-lock.json  package.json
.github/: copilot-instructions.md
.next/: app-build-manifest.json  trace
01_docs/: crear_presentacion.vba  presentacion.md
03_scripts/: create_structure.sh
04_adm/: Dockerfile  pyproject.toml
05_ops/: Dockerfile  pyproject.toml
06_web/: .env  Dockerfile  README_dashboard.md  STREAMLIT_README.md  app.py  init_sample_data.py  pyproject.toml
06_web/api/: data.json
06_web/scripts/: count_logs.py  create_db_schema.py  ingest_csv_data.py  ingest_logs.py
06_web/src/adapters/primary/web/: __init__.py  streamlit_app.py
06_web/src/adapters/secondary/api/: pump_api_client.py
06_web/src/adapters/secondary/persistence/memory/: __init__.py  product_repository.py
06_web/src/adapters/secondary/persistence/postgresql/: historical_data_repository.py
06_web/src/application/dtos/: __init__.py  product_dto.py
06_web/src/application/use_cases/: __init__.py  alarm_service.py  historical_data_service.py  product_service.py
06_web/src/config/: di_config.py
06_web/src/domain/entities/: __init__.py  product.py
06_web/src/domain/repositories/: __init__.py  log_repository.py  product_repository.py
06_web/static/css/: style.css
06_web/static/js/: app.js
06_web/templates/: historical_dashboard.html  index.html  login.html
07_raspb/: Dockerfile  pyproject.toml
08_web_disabled/: README.md  package-lock.json  package.json
09_web/: package.json
data/: pump-systems.json
src/app/: layout.tsx
(+212 files in other folders)
